src/objects/Community_Resource_Tag__c.object
<CustomObject>
    <description>This object allows tags to be associated with a Resource record.</description>
    <fields>
        <fullName>Community_Tag__c</fullName>
        <description>This defines the Tag that is being associated to the Resource</description>
        <label>Community Tag</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Community_Tag__c.Community_Theme__r.Theme_Type__c</field>
                <operation>equals</operation>
                <value>Interest, System</value>
            </filterItems>
            <infoMessage>You can only select Tags where Theme Type = Interest.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Community_Tag__c</referenceTo>
        <relationshipLabel>Resource Items Tagged</relationshipLabel>
        <relationshipName>Community_ResourceItems_Tagged</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource_Tag_SF_ID__c</fullName>
        <description>Represents the 18 digit unique Salesforce ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit unique Salesforce ID.</inlineHelpText>
        <label>Resource Tag SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>This defines the Resource that is being associated with the Tag.</description>
        <label>Resource</label>
        <referenceTo>Community_Resource__c</referenceTo>
        <relationshipLabel>Resource Tags</relationshipLabel>
        <relationshipName>Community_Resource_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <description>Represents the Theme that related Tag is associated with.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Id , Community_Tag__r.Name ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Theme the Tag is associated with.</inlineHelpText>
        <label>Theme</label>
        <type>Text</type>
    </fields>
    <label>Community Resource Tag</label>
    <nameField>
        <displayFormat>CRT-{yy}{mm}{0}</displayFormat>
        <label>Community Resource Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Resource Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>